--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="box">
             <a href="./home.html">
-                <h1>Personal Portfolio</h1>
+                <h1>Portfolio</h1>
             </a>
             <a href="#project-section">PROJECTS</a>
             <a href="#certificate-section">CERTIFICATES</a>
